Fix warp list permission check using wrong perm